# utxix

./: Cargo.toml  README.md
crates/agent_ui/src/: agent_panel.rs
crates/agent_ui/src/acp/: message_editor.rs  thread_view.rs
crates/bitcoin_app_wizard/: Cargo.toml
crates/bitcoin_app_wizard/src/: bitcoin_app_wizard.rs  templates.rs  wizard_modal.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: welcome.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
extensions/utxix/: Cargo.toml  extension.toml  utxix
extensions/utxix/languages/: scrypt.toml
extensions/utxix/languages/scrypt/: config.toml  highlights.scm
extensions/utxix/src/: lib.rs
extensions/utxix/themes/: utxix-dark.json  utxix-jaguar.json
